--- a/codebook/codebook.Rmd
+++ b/codebook/codebook.Rmd
@@ -2,6 +2,11 @@
 title: "Party Facts"
 subtitle: '*Codebook version: `r Sys.Date()`*'
 output:
+  md_document:
+    variant: markdown_github
+  pdf_document:
+    toc: yes
+    toc_depth: '3'
   html_document:
     code_folding: hide
     fig_height: 5
@@ -10,11 +15,6 @@ output:
     toc: yes
     toc_depth: 3
     toc_float: yes
-  pdf_document:
-    toc: yes
-    toc_depth: '3'
-  md_document:
-    variant: markdown_github
 ---
 
 <style type="text/css">
@@ -188,7 +188,7 @@ There are other technical options for linking parties:
 - **alliance** -- electoral alliance which took part in only one election (see section "[Electoral alliances]")
 - **unknown** -- parties that could not be identified (should include a short discussion comment)
 - **independent** -- non-partisan, independent
-- **other** -- category other in external dataset
+- **other** -- category _other_ in external dataset
 - **1perc** -- a party winning less than 1.0% vote share in national elections
   + Please add a short comment to the external party with the respective max. vote share (< 1.0%) and year of election
 
