add robot "year_last" Wikipedia

--- a/codebook/codebook.Rmd
+++ b/codebook/codebook.Rmd
@@ -574,12 +574,13 @@ We review all comments and mark them as solved once the issue has been addressed
 
 Documentation of automatic data changes since November 2018 (user robot).
 
-2021-03-08 — 2021-03-12
+2021-03-08 — 2021-03-13
 
 - updated core parties share information using linked external parties share (esp. V-Party)
 - removed "ParIS" entry from *description* and *comment* field in core parties (around 1000)
 - renamed "Prime Minister" into PM in core party *description* field
 - replaced "--" with "—" in *name* and *name_english* field in core parties (around 50)
+- updated "year_last" with "dissolved" from Wikipedia element
 
 2018-11-17
 
