--- a/codebook/codebook.Rmd
+++ b/codebook/codebook.Rmd
@@ -41,8 +41,8 @@ body {
 
 **References**
 
-+ Döring, Holger, and Sven Regel. 2019. “Party Facts: A Database of Political Parties Worldwide.” Party Politics 25(2): 97–109. doi: [doi: 10.1177/1354068818820671](https://doi.org/10.1177/1354068818820671).
-+ Bederke, Paul, Holger Döring, and Sven Regel. 2020. “Party Facts Dataverse.” [dataverse.harvard.edu/dataverse/partyfacts](https://dataverse.harvard.edu/dataverse/partyfacts).
++ Döring, Holger, and Sven Regel. 2019. “Party Facts: A Database of Political Parties Worldwide.” Party Politics 25(2): 97–109. doi: [10.1177/1354068818820671](https://doi.org/10.1177/1354068818820671)
++ Bederke, Paul, Holger Döring, and Sven Regel. 2020. “Party Facts Dataverse.” [dataverse.harvard.edu/dataverse/partyfacts](https://dataverse.harvard.edu/dataverse/partyfacts)
 
 
 
