--- a/codebook/codebook.Rmd
+++ b/codebook/codebook.Rmd
@@ -2,6 +2,11 @@
 title: "Party Facts"
 subtitle: '*Codebook version: `r Sys.Date()`*'
 output:
+  md_document:
+    variant: markdown_github
+  pdf_document:
+    toc: yes
+    toc_depth: '3'
   html_document:
     code_folding: hide
     fig_height: 5
@@ -10,11 +15,6 @@ output:
     toc: yes
     toc_depth: 3
     toc_float: yes
-  pdf_document:
-    toc: yes
-    toc_depth: '3'
-  md_document:
-    variant: markdown_github
 ---
 
 <style type="text/css">
@@ -144,7 +144,7 @@ The Party Facts project aims to gather information on **all parties** in the wor
 The project may add parties
 
 - from external datasets that won at least **1.0% of the vote** (preferably in two elections)
-- with a **significant leader** (prime minister, president)
+- with a **significant leader** (prime minister, president, senior minister)
 - included in multiple external datasets (preferably at least three datasets)
 
 The respective threshold for including and linking parties from external datasets depends on the quality of the party level information (names, first/last year, election results) in the external source.
