--- a/codebook/codebook.Rmd
+++ b/codebook/codebook.Rmd
@@ -2,6 +2,11 @@
 title: <img src="partyfacts-logo.png" alt="logo" width="200"/>
 subtitle: '*Codebook version: `r Sys.Date()`*'
 output:
+  md_document:
+    variant: markdown_github
+  pdf_document:
+    toc: yes
+    toc_depth: '3'
   html_document:
     code_folding: hide
     fig_height: 5
@@ -10,11 +15,6 @@ output:
     toc: yes
     toc_depth: 3
     toc_float: yes
-  pdf_document:
-    toc: yes
-    toc_depth: '3'
-  md_document:
-    variant: markdown_github
 ---
 
 <style type="text/css">
@@ -93,7 +93,7 @@ With Party Facts we want to establish an infrastructure that supports political 
 ## worldmap
 pf_core_map <- read_csv("https://partyfacts.herokuapp.com/download/core-parties-csv/", na = "")
 
-world <- read_rds("worldmap.rds") %>% mutate(id=iso3)
+world <- read_rds("figure_worldmap.rds") %>% mutate(id=iso3)
 
 pf_dt <- pf_core_map %>% filter(is.na(technical))
 
