--- a/codebook/codebook.Rmd
+++ b/codebook/codebook.Rmd
@@ -2,11 +2,6 @@
 title: <img src="partyfacts-logo.png" alt="logo" width="200"/>
 subtitle: '*Codebook version: `r Sys.Date()`*'
 output:
-  md_document:
-    variant: markdown_github
-  pdf_document:
-    toc: yes
-    toc_depth: '3'
   html_document:
     code_folding: hide
     fig_height: 5
@@ -15,6 +10,11 @@ output:
     toc: yes
     toc_depth: 3
     toc_float: yes
+  pdf_document:
+    toc: yes
+    toc_depth: '3'
+  md_document:
+    variant: markdown_github
 ---
 
 <style type="text/css">
@@ -30,7 +30,7 @@ body {
 **Project leaders**
 
 + Paul Bederke (University of Konstanz) -- since 2019
-+ Holger Döring (GESIS – Leibniz Institute for the Social Sciences) -- since 2012
++ Holger Döring -- since 2012
 + Sven Regel (WZB Berlin Social Science Center) -- 2012–2023
 </br>
 
