--- a/codebook/codebook.Rmd
+++ b/codebook/codebook.Rmd
@@ -24,10 +24,10 @@ output:
 
 **Project leaders**
 
-- Paul Bederke — GESIS Leibniz Institute for the Social Sciences — since
+- Paul Bederke — GESIS Leibniz Institute for the Social Sciences, Germany — since
   2019
-- Holger Döring — SOCIUM Research Center, University of Bremen — since 2012
-- Sven Regel — WZB Berlin Social Science Center — 2012–2023 </br>
+- Holger Döring — SOCIUM Research Center, University of Bremen, Germany — since 2012
+- Sven Regel — WZB Berlin Social Science Center, Germany — 2012–2023 </br>
 
 **Contact**
 
